added image gen

--- a/app/Pipfile
+++ b/app/Pipfile
@@ -11,6 +11,10 @@ django-allauth = "*"
 django-crispy-forms = "*"
 django-pure-pagination = "*"
 pillow = "*"
+tensorflow = "*"
+tensorflow-hub = "*"
+ipython = "*"
+matplotlib = "*"
 
 [requires]
 python_version = "3.8"
